--- a/client/index.html
+++ b/client/index.html
@@ -8,161 +8,10 @@
    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-   
-   <!-- <div>
-      <table class="board">
-         <thead>
-            <tr>
-               <th></th>
-               <th scope="col">A</th>
-               <th scope="col">B</th>
-               <th scope="col">C</th>
-               <th scope="col">D</th>
-               <th scope="col">E</th>
-               <th scope="col">F</th>
-               <th scope="col">G</th>
-               <th scope="col">H</th>
-               <th scope="col">I</th>
-               <th scope="col">J</th>
-            </tr>
-         </thead>
-         <tbody>
-            <tr>
-               <th scope="row">1</th>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-            <tr>
-               <th scope="row">2</th>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-            <tr>
-               <th scope="row">3</th>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-            <tr>
-               <th scope="row">4</th>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-            <tr>
-               <th scope="row">5</th>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-            <tr>
-               <th scope="row">6</th>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-            <tr>
-               <th scope="row">7</th>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-            <tr>
-               <th scope="row">8</th>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-            <tr>
-               <th scope="row">9</th>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-            <tr>
-               <th scope="row">10</th>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-               <td></td>
-            </tr>
-         </tbody>
-      </table>
-   </div> -->
 
    <div id="app"></div>
 
-   <script src="assets/js/main.js"></script>
+   
+   <script src="assets/js/bundle.js"></script>
 </body>
 </html>
