--- a/client/index.html
+++ b/client/index.html
@@ -9,9 +9,18 @@
 </head>
 <body>
 
-   <div id="app"></div>
+   <div id="app">
 
-   
+      <div class="draggable" data-lenght="1"></div>
+      <div class="draggable" data-lenght="2"></div>
+      <div class="draggable" data-lenght="3"></div>
+      <div class="draggable" data-lenght="4"></div>
+
+   </div>
+
    <script src="assets/js/bundle.js"></script>
+   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+   <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
+   <script src="assets/js/drag-drop.js"></script>
 </body>
 </html>
